# wasm_front_rust

./: Cargo.toml  README.md  index.html
src/: lib.rs
